# one-time-pad-socket

./: Cargo.toml
src/: ftp.rs  keygen.rs  main.rs
src/listener/: mod.rs
src/socket/: #internals.rs#  .#internals.rs  ftp.rs  internals.rs  io.rs  mod.rs  read.rs  write.rs
src/xorsocket/: mod.rs  socket.rs
util/: Cargo.toml
util/src/: fs.rs  net.rs
