[package]
name = "onetimepad"
version = "0.1.0"
authors = ["ahewins <ahewins@flexibleplan.com>"]
about = "Send XOR'd data over a socket"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
util = { path = "util/" }
rand = "0.7.0"
# file-lock = "1.1.20"